--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:teensylc]
+[env:teensy31]
 platform = teensy
-board = teensylc
+board = teensy31
 framework = arduino
